assets/css/color/pink.css
@import '../main.css';
@import '../header.css';
@import '../logo.css';
@import '../pagination.css';
@import '../post.css';
@import '../syntax.css';
@import '../variables.css';

/* Color Options */

/* #69306d */
/* #70566d */
/* #a5668b */
/* #8E0045 */
/* #b8336a */
/* #da2f68 */
/* #ee2677 */
/* #f04288 */
/* #e87ea1 */
/* #FC174C */

/* #174237 */
/* #18614F */

/* Instead of black: #36020E */
/* Instead of black: #0a1a0f */

:root {
	--accent: #174237;
	--color: #0a1a0f;
	--border-color: #174237;
}

/* 
	Trick to set root font-size to 10px. For example,
	font-size of 1.4rem will now equal 14px.
*/

html {
	font-size: 62.5%;
}

body {
	background-color: color-mod(var(--accent) blend(#fff 75%));
	font-size: 1.8rem;
}

h1 {
	font-size: 2.8rem;
}

h2 {
	font-size: 2.6rem;
}

h3 {
	font-size: 2.4rem;
}

h4 {
	font-size: 2.2rem;
}

h5 {
	font-size: 2.0rem;
}

h6 {
	font-size: 1.8rem;
}

figure figcaption {
	background: none;
	color: var(--accent);
	font-weight: 800;
	font-style: normal;
}

hr {
	background: var(--color);
}

.header {
	&__logo {
		&:after {
			background: repeating-linear-gradient(90deg, color-mod(var(--accent) blend(#fff 25%)), color-mod(var(--accent) blend(#fff 25%)) 1px, transparent 0, transparent 2px);

			@media (--phone) {
				background: repeating-linear-gradient(180deg, color-mod(var(--accent) blend(#fff 25%)), color-mod(var(--accent) blend(#fff 25%)) 1px, transparent 0, transparent 2px);
			}
		}
	}
}

.header__logo>a {
	padding-left: 2px;
	padding-right: 2px;
	background: color-mod(var(--accent) blend(#fff 25%));
	color: color-mod(var(--accent) blend(#fff 75%));
}

.menu {
	--shadow-color: none !important;
	text-decoration: underline double;
	color: var(--color) !important;
	background: color-mod(var(--accent) blend(#fff 75%)) !important;
}

.menu-trigger {
	visibility: hidden;

	@media (--phone) {
		visibility: visible;
	}
}

.tagline {
	font-size: 1.5em;
	font-style: italic;
	text-align: center;
	background: color-mod(var(--accent) blend(#fff 25%));
	color: color-mod(var(--accent) blend(#fff 75%));
	margin-top: 40px;
	margin-bottom: 40px;

	@media (--phone) {
		margin-bottom: 0px;
	}
}

.container {
	max-width: 1100px;
}

.post-title {
	--border: 3px dashed var(--accent);
}

.post-content {
	font-size: 2.0rem;
}

.post-date,
.post-author,
.post-tags,
.read-more,
.button__text,
.button__icon {
	font-size: 1.4rem;
	font-weight: bold;
}

.pagination__title-h {
	background: none;
}

.footer__inner {
	align-items: flex-start;
}

.copyright--user {
	margin: none;
}

.copyright>span {
	font-size: 1.4rem;
}

.fof-title {
	font-size: 4.0rem;
}

